# CrewAI_RAG

./: .gitignore  1_crew.py  README.md  pyproject.toml
youtube_and_web/: crew.py
youtube_and_web/tools/: AddVideoToVectorDBTool.py  FetchLatestVideosFromYouTubeChannelTool.py
